--- a/MyCalendar.MVC/Views/Home/v5.cshtml
+++ b/MyCalendar.MVC/Views/Home/v5.cshtml
@@ -22,7 +22,7 @@
 else
 {
     <div id="currentActivity" class="alert alert-info" role="alert" style="display: none"></div>
-    @*<div id="calender"></div>*@
+    <div id="calender"></div>
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -106,18 +106,18 @@ else
         </div>
     </div>
 
-    <!---->
+    
     <link href="~/Content/fullcalendar/main.min.css" rel="stylesheet" />
     <script src="~/Scripts/fullcalendar/main.min.js"></script>
 
 
-    <!---->
+    
 
-    @*<link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.css" rel="stylesheet" />
+    <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.css" rel="stylesheet" />
         <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.print.css" rel="stylesheet" media="print" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/black-tie/jquery-ui.min.css" rel="stylesheet" />
 
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />*@
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
     @section Scripts{
         <script>
 
@@ -278,7 +278,7 @@ else
 
         </script>
 
-        @*<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
             <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.js"></script>
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
             <script>
@@ -607,7 +607,7 @@ else
                         })
                     }
                 })
-            </script>*@
+            </script>
     }
 }
 
