--- a/MyCalendar.MVC/Views/Cronofy/Profiles.cshtml
+++ b/MyCalendar.MVC/Views/Cronofy/Profiles.cshtml
@@ -70,7 +70,8 @@
                             <table class="table table-hover">
                                 <thead>
                                     <tr class="table-info">
-                                        <th width="40%" scope="col">Name</th>
+                                        <th width="35%" scope="col">Name</th>
+                                        <th width="20%" scope="col">Sync In Calendar</th>
                                         <th width="15%" scope="col">
                                             <span data-toggle="tooltip" title="Pull events created/deleted from @Utils.UppercaseFirst(profile.Key.ProviderName) Calendar to @baseModel.AppName">Read</span>
                                         </th>
@@ -85,11 +86,19 @@
                                 <tbody>
                                     @foreach (var calendar in profile.Value)
                                     {
-                                        var linkedCal = baseModel.User.ExtCalendarRights?.FirstOrDefault(x => x.Id == calendar.CalendarId) ?? null;
+                                        var linkedCal = baseModel.User.ExtCalendarRights?.FirstOrDefault(x => x.SyncFromCalendarId == calendar.CalendarId) ?? null;
                                         <tr>
                                             <td scope="row">
                                                 <a href="/cronofy/calendar/@calendar.CalendarId">@calendar.Name</a>
-                                                <input type="hidden" value="@calendar.CalendarId" name="Id[]" />
+                                                <input type="hidden" value="@calendar.CalendarId" name="SyncFromCalendarId[]" />
+                                            </td>
+                                            <td scope="row">
+                                                <select name="SyncToCalendarId[]" required>
+                                                    @foreach (var userCalendar in Model.UserCalendars.Where(x => x.UserCreatedId == baseModel.User.UserID))
+                                                    {
+                                                        <option value="@userCalendar.Id" selected="@(linkedCal != null && linkedCal.SyncToCalendarId == userCalendar.Id ? true : false)">@userCalendar.Name</option>
+                                                    }
+                                                </select>
                                             </td>
                                             <td>
                                                 <div class="form-check">
