--- a/MyCalendar.MVC/Views/Document/Index.cshtml
+++ b/MyCalendar.MVC/Views/Document/Index.cshtml
@@ -72,7 +72,7 @@
                     </tbody>
                 </table>
                 <div id="load-docs" style="display: none">
-                    <div class="loader loader-big"></div>
+                    <div class="loader loader-medium"></div>
                 </div>
             </div>
             <hr />
