--- a/MyCalendar.MVC/Views/Event/Overview.cshtml
+++ b/MyCalendar.MVC/Views/Event/Overview.cshtml
@@ -41,7 +41,7 @@
     </div>
     <hr />
     <div id="load-activities" style="display: none">
-        <div class="loader loader-big"></div>
+        <div class="loader loader-medium"></div>
     </div>
     @if (Model.HoursWorkedInTag != null && Model.HoursWorkedInTag.Any())
     {
