--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                         <span class="fas fa-home"></span> Home
                     </a>
                 </li>
+                
                 @if (Model != null && Model.User != null)
                 {
                     if (Model.AccessibleFeatures.Any(x => x.Id == Features.Calendar))
@@ -52,61 +53,11 @@
                             </a>
                             <input type="checkbox" id="sm1">
                             <ul class="sub-menu">
-                                @if (!Model.MenuItem.Home)
-                                {
-                                    <li>
-                                        <a href="@Url.Action(Url.MvcRoute(Section.Home).ActionName, Url.MvcRoute(Section.Home).ControllerName)" style="@(Model.MenuItem.Home ? "color:#09c" : "")">
-                                            <span class="fas fa-calendar"></span> View Calendar
-                                        </a>
-                                    </li>
-                                }
-                                else
-                                {
-                                    <li>
-                                        <a href="#" style="@(Model.MenuItem.Home ? "color:#09c" : "")">
-                                            <span class="fas fa-calendar"></span> Calendars
-                                            <span class="drop-icon">
-                                                <span class="fas fa-angle-down"></span>
-                                            </span>
-                                            <label title="Toggle Drop-down" class="drop-icon" for="sm2">
-                                                <span class="fas fa-angle-down"></span>
-                                            </label>
-                                        </a>
-                                        <input type="checkbox" id="sm2">
-                                        <ul class="sub-menu">
-                                            @foreach (var userCalendar in Model.UserCalendars.OrderByDescending(x => x.UserCreatedId == Model.User.UserID))
-                                            {
-                                                <li>
-                                                    <a href="#">
-                                                        <span class="fas fa-calendar-check"></span> @userCalendar.Name
-                                                        @if (Model.User.UserID != userCalendar.UserCreatedId)
-                                                        {
-                                                            <span class="badge badge-info text-small">shared by @userCalendar.InviteeName</span>
-                                                        }
-                                                        <span class="float-right">
-                                                            <input type="checkbox" style="display:inline" name="selectedCalendar[]" value="@userCalendar.Id" @(Model.User.UserID == userCalendar.UserCreatedId && userCalendar.Defaulted ? "checked=\"checked\"" : "") />
-                                                        </span>
-                                                    </a>
-                                                </li>
-                                            }
-                                            <!-- submenu-->
-                                            @*<li>
-                                        <a href="#">
-                                            Item 2.2.2
-                                            <span class="drop-icon"><span class="fas fa-angle-down"></span></span>
-                                            <label title="Toggle Drop-down" class="drop-icon" for="sm3"><span class="fas fa-angle-down"></span></label>
-                                        </a>
-                                        <input type="checkbox" id="sm3">
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Item 3.2.1</a></li>
-                                            <li><a href="#">Item 3.2.2</a></li>
-                                        </ul>
-                                    </li>*@
-                                            <!-- end submenu -->
-                                        </ul>
-                                    </li>
-                                }
-
+                                <li>
+                                    <a href="@Url.Action(Url.MvcRoute(Section.Home).ActionName, Url.MvcRoute(Section.Home).ControllerName)" style="@(Model.MenuItem.Home ? "color:#09c" : "")">
+                                        <span class="fas fa-calendar"></span> Calendar
+                                    </a>
+                                </li>
                                 <li>
                                     <a style="@(Model.MenuItem.MultiAdd ? "color:#09c" : "")" href="@Url.Action(Url.MvcRoute(Section.Scheduler).ActionName, Url.MvcRoute(Section.Scheduler).ControllerName)">
                                         <span class="fas fa-calendar-check"></span> Scheduler
@@ -146,11 +97,11 @@
                                 <span class="drop-icon">
                                     <span class="fas fa-angle-down"></span>
                                 </span>
-                                <label title="Toggle Drop-down" class="drop-icon" for="sm3">
+                                <label title="Toggle Drop-down" class="drop-icon" for="sm2">
                                     <span class="fas fa-angle-down"></span>
                                 </label>
                             </a>
-                            <input type="checkbox" id="sm3">
+                            <input type="checkbox" id="sm2">
                             <ul class="sub-menu">
                                 <li>
                                     <a style="@(Model.MenuItem.ERNewOrder ? "color:#09c": "")" href="@Url.Action(Url.MvcRoute(Section.ErrandRunnerNewOrder).ActionName, Url.MvcRoute(Section.ErrandRunnerNewOrder).ControllerName)">
@@ -199,7 +150,6 @@
     </nav>
     <div class="container body-content">
         <br />
-        <div id="cover-spin"></div>
         @RenderBody()
         <hr />
         <footer>
