--- a/MyCalendar.React/FullCalendar/src/components/fullcalendar/Calendar.css
+++ b/MyCalendar.React/FullCalendar/src/components/fullcalendar/Calendar.css
@@ -1,6 +1,3 @@
-body {
-    font-family: Georgia, 'Times New Roman', Times, serif
-}
 
 .fc-col-header {
     border: 1px solid #a3a3a3;
@@ -26,7 +23,8 @@ body {
     font-size: 12px;
     color: #fff;
     line-height: 1.4;
-    background-color: #2C3E50;
+    background-image: url('../../assets/bg1.jpg');
+    overflow-y: hidden !important;
 }
 
 .fc-col-header tbody th {
@@ -45,9 +43,18 @@ body {
     color: #222;
 }
 
-.fc-list-day-cushion {
-    background-color: #2C3E50 !important;
+.fc-cell-shaded {
+    background-image: url('../../assets/bg1.jpg');
+    border: none;
     color: #fff;
+}
+
+.fc-list-event {
+    background: #fff;
+}
+
+.fc-list {
+    background: #eee;
 }
 
 .fc-icon.fa {
@@ -64,4 +71,21 @@ body {
         opacity: 1;
         transform: scale(1);
     }
+}
+
+.fc .fc-button-primary {
+    background-image: url('../../assets/bg1.jpg');
+    border: none;
+    box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+}
+
+button:disabled{
+    display: none;
+}
+
+.modal-bg {
+    background-image: url('https://newevolutiondesigns.com/images/freebies/white-wallpaper-18.jpg');
+    background-size: cover;
+    border-radius: 5px;
+    box-shadow: 0 3px 3px rgba(0,0,0,0.2);
 }
